# qiskit-ignis

./: .gitignore  .mailmap  .pylintrc  .stestr.conf  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  constraints.txt  push.qiskit.py  pyproject.toml  quantum_volume.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  release_notes.rst
example/: Interleaved_RB.ipynb  purity_rb.ipynb  quantum_volume.ipynb
examples/: Clifford_Group.ipynb  DiscriminatorTutorial.ipynb  Process Tomo Actual Device.ipynb  RB_overview.ipynb  accreditation_tutorial.ipynb  coherence-overview.ipynb  corr_randomized_benchmarking.ipynb  cr_hamiltonian_tomography.ipynb  hamiltonian_and_gate_characterization.ipynb  ignis_logging.ipynb  interface_demo.ipynb  measurement_calibration.ipynb  measurement_correction.ipynb  measurement_error_mitigation.ipynb  non_clifford_rb.ipynb  process-tomography.ipynb  quantum_volume.ipynb  randomized_benchmarking.ipynb  readme.md  relaxation_and_decoherence.ipynb  repetition_code_tutorial.ipynb  state-tomography.ipynb  tomography-overview.ipynb
master/: mardkdown.py
test/: test_tomography_interface.py  utils.py
tests/: test_clifford.py  test_exact_state_tomography.py  test_fitters.py  test_linear_inversion_state_tomography.py  test_random_expected.txt  test_rb.py  test_state_tomography.py  test_tables_expected.txt
tools/: build_aer.py
topological_codes/: circuits.py  fitters.py
(+466 files in other folders)
