[metadata]
name = qiskit-ignis
author = Qiskit Development Team
author_email = qiskit@qiskit.org
license = Apache 2.0
description = Qiskit tools for quantum information science
keywords = qiskit, sdk, quantum
url = https://github.com/Qiskit/qiskit-ignis
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False
install_requires =
    numpy>=1.13
    qiskit-terra>=0.13.0
    scipy>=0.19,!=0.19.1
    setuptools>=40.1.0
include_package_data = True
python_requires = >=3.5

[options.extras_require]
visualization = matplotlib>=2.1
cvx = cvxpy>=1.0.15
